<resources>
    <string name="app_name">پازل جملات</string>

    <!-- Quiz Activity -->
    <string name="error_loading_questions">خطا در بارگذاری سوالات</string>
    <string name="score">امتیاز: %d</string>
    <string name="level">مرحله %d - %s</string>
    <string name="game_over">بازی تمام شد!</string>
    <string name="game_over_message">قلب‌های شما تمام شد. امتیاز نهایی: %d</string>
    <string name="restart_level">شروع دوباره مرحله</string>
    <string name="main_menu">منوی اصلی</string>
    <string name="level_complete">مرحله کامل شد!</string>
    <string name="level_complete_message">تبریک! شما %s را با امتیاز %d به پایان رساندید</string>
    <string name="ok">تایید</string>
    <string name="no_hint_available">راهنمایی برای این سوال موجود نیست</string>
    <string name="hint">راهنمایی</string>
    <string name="got_it">متوجه شدم</string>
    <string name="close_hint">بستن راهنمایی</string>
    <string name="german_language_not_supported">زبان آلمانی پشتیبانی نمی‌شود</string>

    <!-- Layout strings -->
    <string name="back_to_level_picker">بازگشت به انتخاب مرحله</string>
    <string name="default_level">مرحله ۱ - هامبورگ</string>
    <string name="default_score">امتیاز: ۰</string>
    <string name="progress_format">%1$d / %2$d</string>
    <string name="default_progress">۰ / ۰</string>
    <string name="default_question">ich hätte gern ein .... Kaffee</string>
    <string name="show_hint">نمایش راهنمایی</string>
    <string name="option_1">گزینه ۱</string>
    <string name="option_2">گزینه ۲</string>
    <string name="option_3">گزینه ۳</string>
    <string name="option_4">گزینه ۴</string>

    <!-- City names -->
    <string name="hamburg">هامبورگ</string>
    <string name="berlin">برلین</string>
    <string name="leipzig">لایپزیگ</string>
    <string name="dusseldorf">دوسلدورف</string>
    <string name="cologne">کلن</string>
    <string name="frankfurt">فرانکفورت</string>
    <string name="stuttgart">اشتوتگارت</string>
    <string name="munich">مونیخ</string>
    <string name="dresden">درسدن</string>

    <!-- About Activity -->
    <string name="back">بازگشت</string>
    <string name="copyright">© ۲۰۲۴ SatzPuzzle. تمام حقوق محفوظ است.</string>

    <!-- Activity Labels -->
    <string name="quiz_label">آزمون</string>
    <string name="about_label">درباره</string>

    <!-- About Activity -->
    <string name="about_developer_title">درباره سازنده</string>
    <string name="app_title_persian">پازل جملات</string>
    <string name="version">نسخه ۱.۲</string>
    <string name="developer">سازنده</string>
    <string name="developer_name">محسن شامحمدی</string>
    <string name="email_title">پست الکترونیک</string>
    <string name="special_thanks_title">سپاس ویژه</string>
    <string name="special_thanks_name">مهدی حسینی</string>
    <string name="about_button">درباره ما</string>
    <string name="about_us_menu">درباره ما</string>

    <!-- References Activity -->
    <string name="references_menu">منابع</string>
    <string name="references_title">منابع و مراجع</string>
    <string name="references_description">منابع و وب‌سایت‌هایی که در توسعه این اپلیکیشن استفاده شده‌اند:</string>
    <string name="references_label">منابع</string>

    <string-array name="reference_urls">
        <item>https://languesvivantes.com/en/program/german-in-berlin-did/</item>
        <item>https://pixers.uk/stickers/cologne-germany-57686364</item>
        <item>https://tourism.restexpert.com/germany/nordrhein-westfalen/towns/</item>
        <item>https://simple.wikipedia.org/wiki/Frankfurt</item>
        <item>https://www.reddit.com/r/howislivingthere/comments/1k83sk4/how_is_quality_of_life_in_hamburg/</item>
        <item>https://www.leipzig.de/newsarchiv/news/leipzig%20maintains%202nd%20place%20in%20city%20rankings%20for%20future%20outlook</item>
        <item>https://www.msn.com/en-sg/news/other/revealed-expats-in-europe-are-among-the-unhappiest-in-the-world/ar-AA1MzDG0</item>
        <item>https://uniquegermany.de/portfolio-item/private-walking-tour-of-stuttgart/</item>
    </string-array>

    <!-- City Progression -->
    <string name="hamburg_key">hamburg</string>
    <string name="berlin_key">berlin</string>
    <string name="leipzig_key">leipzig</string>
    <string name="dusseldorf_key">dusseldorf</string>
    <string name="cologne_key">cologne</string>
    <string name="frankfurt_key">frankfurt</string>
    <string name="stuttgart_key">stuttgart</string>
    <string name="munich_key">munich</string>
    <string name="dresden_key">dresden</string>

    <!-- Intent Extras -->
    <string name="extra_city_name">CITY_NAME</string>
    <string name="extra_level_number">LEVEL_NUMBER</string>
    <string name="extra_global_score">GLOBAL_SCORE</string>
    <string name="extra_final_score">FINAL_SCORE</string>

    <!-- Level Picker -->
    <string name="level_picker_title">انتخاب مرحله</string>
    <string name="level_picker_subtitle">یک شهر را برای شروع انتخاب کن</string>

    <!-- Text-to-Speech Messages -->
    <string name="tts_not_ready">صوت آماده نیست</string>
    <string name="tts_error">خطا در پخش صدا</string>

    </resources>